--- a/index.html
+++ b/index.html
@@ -7,14 +7,48 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,400i|Nunito:300,300i" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.comp.css">
     <link rel="shortcut icon" type="image/png" href="img/favicon.png">
 
     <title>nexter &mdash; your home, your freedom</title>
 </head>
 
 <body class="container">
+    <div class="sidebar">
+        Sidebar
+    </div>
 
+    <header class="header">
+        Header
+    </header>
+
+    <div class="realtors">
+        Top 3 Realtors
+    </div>
+
+    <section class="features">
+        Features
+    </section>
+
+    <div class="story__pictures">
+        Story pictures
+    </div>
+
+    <div class="story__content">
+        Story content
+    </div>
+
+    <div class="homes">
+        Homes
+    </div>
+
+    <div class="gallery">
+        Gallery
+    </div>
+
+    <footer class="footer">
+        Footer
+    </footer>
 </body>
 
 </html>
