--- a/index.html
+++ b/index.html
@@ -33,7 +33,26 @@
     </header>
 
     <div class="realtors">
-        Top 3 Realtors
+        <h3 class="heading-3">Top 3 Realtors</h3>
+        <div class="realtors__list">
+            <img src="img/realtor-1.jpeg" alt="Realtor 1" class="realtors__img">
+            <div class="realtors__details">
+                <h4 class="heading-4 heading-4--light">Erik Feinman</h4>
+                <p class="realtors__sold">245 houses sold</p>
+            </div>
+
+            <img src="img/realtor-2.jpeg" alt="Realtor 2" class="realtors__img">
+            <div class="realtors__details">
+                <h4 class="heading-4 heading-4--light">Kim Brown</h4>
+                <p class="realtors__sold">212 houses sold</p>
+            </div>
+
+            <img src="img/realtor-3.jpeg" alt="Realtor 3" class="realtors__img">
+            <div class="realtors__details">
+                <h4 class="heading-4 heading-4--light">Toby Ramsey</h4>
+                <p class="realtors__sold">198 houses sold</p>
+            </div>
+        </div>
     </div>
 
     <section class="features">
@@ -72,7 +91,8 @@
             </svg>
             <h4 class="heading-4 heading-4--dark">New home in one week</h4>
             <p class="feature__text">
-                Vero ipsum sapiente molestias accusamus rerum. Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Vero ipsum sapiente molestias accusamus rerum. Lorem, ipsum dolor sit amet consectetur adipisicing
+                elit.
             </p>
         </div>
         <div class="feature">
