--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
             <li class="nav__item"><a href="#" class="nav__link">Come work with us</a></li>
         </ul>
         <p class="copyright">
-            &copy; Copyright 2020 inspired by Jonas Schmedtmann
+            &copy; Copyright 2020 Designed by Jonas Schmedtmann
         </p>
     </footer>
 </body>
